k8s/eks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chatbi
  labels:
    name: chatbi
