k8s/eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbi
  namespace: chatbi
  labels:
    app: chatbi
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: chatbi
